@@ -1,13 +1,13 @@
 package cn.tuyucheng.taketoday.map.mapmax;
 
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
 import java.util.HashMap;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.Assert.assertEquals;
 
 public class MapMaxUnitTest {
 
@@ -15,7 +15,7 @@ public class MapMaxUnitTest {
    MapMax mapMax = null;
 
 
-   @BeforeEach
+   @Before
    public void setupTestData() {
       map = new HashMap<Integer, Integer>();
       map.put(23, 12);
@@ -26,33 +26,37 @@ public class MapMaxUnitTest {
 
    @Test
    public void givenMap_whenIterated_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingIteration(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingIteration(map));
    }
 
    @Test
    public void givenMap_whenUsingCollectionsMax_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingCollectionsMax(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMax(map));
    }
 
    @Test
    public void givenMap_whenUsingCollectionsMaxAndLambda_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingCollectionsMaxAndLambda(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMaxAndLambda(map));
    }
 
    @Test
    public void givenMap_whenUsingCollectionsMaxAndMethodReference_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingCollectionsMaxAndMethodReference(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMaxAndMethodReference(map));
    }
 
    @Test
    public void givenMap_whenUsingStreamAndLambda_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingStreamAndLambda(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingStreamAndLambda(map));
    }
 
    @Test
    public void givenMap_whenUsingStreamAndMethodReference_thenReturnMaxValue() {
-      assertEquals(new Integer(38), mapMax.maxUsingStreamAndMethodReference(map));
+      assertEquals(Integer.valueOf(38), mapMax.maxUsingStreamAndMethodReference(map));
    }
 
+   @Test
+   public void givenMap_whenUsingStreamAndLambda_thenReturnKeyOfMaxValue() {
+      assertEquals(Integer.valueOf(27), mapMax.keyOfMaxUsingStream(map));
+   }
 
 }
