@@ -1,12 +1,13 @@
 package cn.tuyucheng.taketoday.encoderdecoder;
 
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.Test;
+import org.junit.Assert;
+import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.web.util.UriUtils;
 
 import java.io.UnsupportedEncodingException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
@@ -21,8 +22,8 @@ import static org.hamcrest.CoreMatchers.is;
 public class EncoderDecoderUnitTest {
 
    private static final Logger LOGGER = LoggerFactory.getLogger(EncoderDecoderUnitTest.class);
-   private static final String testUrl = "http://www.tuyucheng.com?key1=value+1&key2=value%40%21%242&key3=value%253";
-   private static final String testUrlWithPath = "http://www.tuyucheng.com/path+1?key1=value+1&key2=value%40%21%242&key3=value%253";
+   private static final String testUrl = "http://www.taketoday.com?key1=value+1&key2=value%40%21%242&key3=value%253";
+   private static final String testUrlWithPath = "http://www.taketoday.com/path+1?key1=value+1&key2=value%40%21%242&key3=value%253";
 
    private String encodeValue(String value) {
       String encoded = null;
@@ -46,11 +47,11 @@ public class EncoderDecoderUnitTest {
 
    @Test
    public void givenURL_whenAnalyze_thenCorrect() throws Exception {
-      URL url = new URL(testUrl);
+      URL url = new URI(testUrl).toURL();
 
-      Assertions.assertThat(url.getProtocol(), is("http"));
-      Assertions.assertThat(url.getHost(), is("www.tuyucheng.com"));
-      Assertions.assertThat(url.getQuery(), is("key1=value+1&key2=value%40%21%242&key3=value%253"));
+      Assert.assertThat(url.getProtocol(), is("http"));
+      Assert.assertThat(url.getHost(), is("www.taketoday.com"));
+      Assert.assertThat(url.getQuery(), is("key1=value+1&key2=value%40%21%242&key3=value%253"));
    }
 
    @Test
@@ -60,20 +61,20 @@ public class EncoderDecoderUnitTest {
       requestParams.put("key2", "value@!$2");
       requestParams.put("key3", "value%3");
 
-      String encodedURL = requestParams.keySet().stream().map(key -> key + "=" + encodeValue(requestParams.get(key))).collect(joining("&", "http://www.tuyucheng.com?", ""));
+      String encodedURL = requestParams.keySet().stream().map(key -> key + "=" + encodeValue(requestParams.get(key))).collect(joining("&", "http://www.taketoday.com?", ""));
 
-      Assertions.assertThat(testUrl, is(encodedURL));
+      Assert.assertThat(testUrl, is(encodedURL));
    }
 
    @Test
    public void givenRequestParam_whenUTF8Scheme_thenDecodeRequestParams() throws Exception {
-      URL url = new URL(testUrl);
+      URL url = new URI(testUrl).toURL();
 
       String query = url.getQuery();
 
       String decodedQuery = Arrays.stream(query.split("&")).map(param -> param.split("=")[0] + "=" + decode(param.split("=")[1])).collect(joining("&"));
 
-      Assertions.assertEquals("http://www.tuyucheng.com?key1=value 1&key2=value@!$2&key3=value%3", url.getProtocol() + "://" + url.getHost() + "?" + decodedQuery);
+      Assert.assertEquals("http://www.taketoday.com?key1=value 1&key2=value@!$2&key3=value%3", url.getProtocol() + "://" + url.getHost() + "?" + decodedQuery);
    }
 
    private String encodePath(String path) {
@@ -90,8 +91,8 @@ public class EncoderDecoderUnitTest {
       String pathSegment = "/Path 1/Path+2";
       String encodedPathSegment = encodePath(pathSegment);
       String decodedPathSegment = UriUtils.decode(encodedPathSegment, "UTF-8");
-      Assertions.assertEquals("/Path%201/Path+2", encodedPathSegment);
-      Assertions.assertEquals("/Path 1/Path+2", decodedPathSegment);
+      Assert.assertEquals("/Path%201/Path+2", encodedPathSegment);
+      Assert.assertEquals("/Path 1/Path+2", decodedPathSegment);
    }
 
    @Test
@@ -103,9 +104,9 @@ public class EncoderDecoderUnitTest {
 
       String path = "path+1";
 
-      String encodedURL = requestParams.keySet().stream().map(key -> key + "=" + encodeValue(requestParams.get(key))).collect(joining("&", "http://www.tuyucheng.com/" + encodePath(path) + "?", ""));
+      String encodedURL = requestParams.keySet().stream().map(key -> key + "=" + encodeValue(requestParams.get(key))).collect(joining("&", "http://www.taketoday.com/" + encodePath(path) + "?", ""));
 
-      Assertions.assertThat(testUrlWithPath, is(encodedURL));
+      Assert.assertThat(testUrlWithPath, is(encodedURL));
    }
 
 }
